--- a/index.html
+++ b/index.html
@@ -9,6 +9,25 @@
     <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
 
     <title>Hobbylog</title>
+      <!--  +++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++ 
++++++++++++++++++++++++++++++++++++++ //2016 ReActive Inc tm +++++++++++++++++++++++++++++++++++++++++++++++
+
+8888888b.                d8888          888    d8b                        8888888                       
+888   Y88b              d88888          888    Y8P                          888                         
+888    888             d88P888          888                                 888                         
+888   d88P .d88b.     d88P 888  .d8888b 888888 888 888  888  .d88b.         888   88888b.   .d8888b     
+8888888P" d8P  Y8b   d88P  888 d88P"    888    888 888  888 d8P  Y8b        888   888 "88b d88P"        
+888 T88b  88888888  d88P   888 888      888    888 Y88  88P 88888888        888   888  888 888          
+888  T88b Y8b.     d8888888888 Y88b.    Y88b.  888  Y8bd8P  Y8b.            888   888  888 Y88b.    d8b 
+888   T88b "Y8888 d88P     888  "Y8888P  "Y888 888   Y88P    "Y8888       8888888 888  888  "Y8888P Y8P 
+                                                                                                        
++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++ 
++++++++++++++++++++++++++++++++++++++ //2016 ReActive Inc tm +++++++++++++++++++++++++++++++++++++++++++++++
++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++ -->
+
+    <link rel="icon" href="facicon.ico" type="imag/x-icon"/>
+    <link rel="shortcu icon" href="favicon.ico" type="image/x-icon"/>
+
   </head>
 
   <body>
